Pokazanie korelacji za pomoca grafow macierzy oraz wspolczynnikow korelacji Pearsona

--- a/first_project_ml_jupyter/ViewData.ipynb
+++ b/first_project_ml_jupyter/ViewData.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from LoadData import load_housing_data"
+    "from LoadData import load_housing_data\n",
+    "from PrepareData import PrepareDate"
    ]
   },
   {
@@ -18,16 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing = load_housing_data()"
+    "housing = load_housing_data()\n",
+    "prepare_date = PrepareDate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +370,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,6 +384,52 @@
    "metadata": {},
    "source": [
     "Podsumowanie wszystkich atrybutów numerycznych."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_num = prepare_date.column_string_to_int(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "median_house_value    1.000000\n",
+       "median_income         0.688075\n",
+       "total_rooms           0.134153\n",
+       "housing_median_age    0.105623\n",
+       "households            0.065843\n",
+       "total_bedrooms        0.049686\n",
+       "population           -0.024650\n",
+       "longitude            -0.045967\n",
+       "latitude             -0.144160\n",
+       "Name: median_house_value, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix = housing_num.corr()\n",
+    "corr_matrix[\"median_house_value\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stopień korelacji każdego atrybutu z medianą cen mieszkań. Wartości zbliżone do 1 to silna korelacja dodatnia, -1 to silna koleracja ujemna, 0 - brak jakielkowiek koleracji zmienne nie są ze sobą powiązane. "
    ]
   }
  ],
